# coffee-tasting-api

./: .env.example  .gitignore  Dockerfile  FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_jwt_validation.py
alembic/: env.py
alembic/versions/: 2025_06_22_1444-0ca0ad41b915_initial_migration_coffee_tasting_schema.py  2025_06_22_1454-31d141bf7e1b_create_coffee_tasting_tables.py  2025_07_07_1355-bacddf8094d4_add_audit_fields_to_all_tables.py  2025_07_07_1420-20a74b01dca4_update_created_by_fields_with_default_.py  2025_07_07_1421-8d35e47f0e55_make_created_by_fields_required.py  2026_01_05_1918-325f47712723_add_anaerobic_to_processing_method_enum.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  coffees.py  flavors.py  health.py  identification.py  me.py  recommendations.py  roasters.py  tastings.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  database.py  graph.py
app/models/: __init__.py  base.py  coffee.py  tasting.py
app/repositories/: __init__.py  base.py  coffee.py  flavor.py  flavor_tag.py  recommendation.py  roaster.py  tasting.py  user.py
app/repositories/graph/: __init__.py  base.py  query.py  sync.py
app/repositories/sql/: __init__.py  coffee.py  flavor_tag.py  roaster.py  tasting.py
app/schemas/: coffee.py  enums.py  flavor.py  flavor_tag.py  identification.py  recommendation.py  roaster.py  tasting.py  user.py
app/services/: __init__.py  embedding_trueup.py  embeddings.py  identification.py
app/services/recommendations/: mvp_analyzer.py
app/tasks/: __init__.py  graph_sync.py
local_dev_tools/: generate_jwt.py
scripts/: reset_neo4j.py  setup_neo4j_constraints.py
supabase/migrations/: 001_create_user_roles.sql  002_create_auth_hook.sql  003_seed_admin_user.sql  README.md
tests/: conftest.py
tests/unit/: __init__.py  test_schemas.py
